fixed configuration script file reading